Reparse desktop file before launching process

If the user edits an application's desktop file while kglobalaccel is running we are currently reading the old data and thus may lauch an outdated command

Reparse the file before reading to ensure the content is up to date

BUG: 444730